--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -684,6 +684,205 @@
    "source": [
     "df.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "17af64f5-9255-4682-b9d0-01d10e371099",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DateHour</th>\n",
+       "      <th>Users</th>\n",
+       "      <th>Sessions</th>\n",
+       "      <th>Engaged sessions</th>\n",
+       "      <th>Average engagement time per session</th>\n",
+       "      <th>Engaged sessions per user</th>\n",
+       "      <th>Events per session</th>\n",
+       "      <th>Engagement rate</th>\n",
+       "      <th>Event count</th>\n",
+       "      <th>Hour</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>3182</td>\n",
+       "      <td>3182.000000</td>\n",
+       "      <td>3182.000000</td>\n",
+       "      <td>3182.000000</td>\n",
+       "      <td>3182.000000</td>\n",
+       "      <td>3182.000000</td>\n",
+       "      <td>3182.000000</td>\n",
+       "      <td>3182.000000</td>\n",
+       "      <td>3182.000000</td>\n",
+       "      <td>3182.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2024-04-20 01:17:07.278441216</td>\n",
+       "      <td>41.935889</td>\n",
+       "      <td>51.192646</td>\n",
+       "      <td>28.325581</td>\n",
+       "      <td>66.644581</td>\n",
+       "      <td>0.606450</td>\n",
+       "      <td>4.675969</td>\n",
+       "      <td>0.503396</td>\n",
+       "      <td>242.272470</td>\n",
+       "      <td>11.807040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2024-04-06 00:00:00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2024-04-13 02:15:00</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>32.103034</td>\n",
+       "      <td>0.561404</td>\n",
+       "      <td>3.750000</td>\n",
+       "      <td>0.442902</td>\n",
+       "      <td>103.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2024-04-20 02:00:00</td>\n",
+       "      <td>42.000000</td>\n",
+       "      <td>51.000000</td>\n",
+       "      <td>27.000000</td>\n",
+       "      <td>49.020202</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>4.410256</td>\n",
+       "      <td>0.545455</td>\n",
+       "      <td>226.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2024-04-26 22:00:00</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>71.000000</td>\n",
+       "      <td>41.000000</td>\n",
+       "      <td>71.487069</td>\n",
+       "      <td>0.750000</td>\n",
+       "      <td>5.217690</td>\n",
+       "      <td>0.633333</td>\n",
+       "      <td>339.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2024-05-03 23:00:00</td>\n",
+       "      <td>237.000000</td>\n",
+       "      <td>300.000000</td>\n",
+       "      <td>144.000000</td>\n",
+       "      <td>4525.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>56.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1402.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29.582258</td>\n",
+       "      <td>36.919962</td>\n",
+       "      <td>20.650569</td>\n",
+       "      <td>127.200659</td>\n",
+       "      <td>0.264023</td>\n",
+       "      <td>2.795228</td>\n",
+       "      <td>0.228206</td>\n",
+       "      <td>184.440313</td>\n",
+       "      <td>6.886686</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            DateHour        Users     Sessions  \\\n",
+       "count                           3182  3182.000000  3182.000000   \n",
+       "mean   2024-04-20 01:17:07.278441216    41.935889    51.192646   \n",
+       "min              2024-04-06 00:00:00     0.000000     1.000000   \n",
+       "25%              2024-04-13 02:15:00    20.000000    24.000000   \n",
+       "50%              2024-04-20 02:00:00    42.000000    51.000000   \n",
+       "75%              2024-04-26 22:00:00    60.000000    71.000000   \n",
+       "max              2024-05-03 23:00:00   237.000000   300.000000   \n",
+       "std                              NaN    29.582258    36.919962   \n",
+       "\n",
+       "       Engaged sessions  Average engagement time per session  \\\n",
+       "count       3182.000000                          3182.000000   \n",
+       "mean          28.325581                            66.644581   \n",
+       "min            0.000000                             0.000000   \n",
+       "25%           13.000000                            32.103034   \n",
+       "50%           27.000000                            49.020202   \n",
+       "75%           41.000000                            71.487069   \n",
+       "max          144.000000                          4525.000000   \n",
+       "std           20.650569                           127.200659   \n",
+       "\n",
+       "       Engaged sessions per user  Events per session  Engagement rate  \\\n",
+       "count                3182.000000         3182.000000      3182.000000   \n",
+       "mean                    0.606450            4.675969         0.503396   \n",
+       "min                     0.000000            1.000000         0.000000   \n",
+       "25%                     0.561404            3.750000         0.442902   \n",
+       "50%                     0.666667            4.410256         0.545455   \n",
+       "75%                     0.750000            5.217690         0.633333   \n",
+       "max                     2.000000           56.000000         1.000000   \n",
+       "std                     0.264023            2.795228         0.228206   \n",
+       "\n",
+       "       Event count         Hour  \n",
+       "count  3182.000000  3182.000000  \n",
+       "mean    242.272470    11.807040  \n",
+       "min       1.000000     0.000000  \n",
+       "25%     103.000000     6.000000  \n",
+       "50%     226.000000    12.000000  \n",
+       "75%     339.000000    18.000000  \n",
+       "max    1402.000000    23.000000  \n",
+       "std     184.440313     6.886686  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
   }
  ],
  "metadata": {
