whitegrid set for graphh

--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -883,6 +883,24 @@
    "source": [
     "df.describe()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "febe1c5d-26a4-4d42-b915-6cff6fbc92c7",
+   "metadata": {},
+   "source": [
+    "#Sessions and User over time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "55e563bc-ccdd-4c4f-af6b-5137e13ab15f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.set(style=\"whitegrid\")"
+   ]
   }
  ],
  "metadata": {
