Fig size allocated

--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -901,6 +901,16 @@
    "source": [
     "sns.set(style=\"whitegrid\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4e13046-1fa5-42df-be36-93df1e84dd1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10,5))"
+   ]
   }
  ],
  "metadata": {
