Grouping done for plotting

--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -909,7 +909,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(10,5))"
+    "plt.figure(figsize=(10,5))\n",
+    "df.groupby(:DateHour"
    ]
   }
  ],
