--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -910,7 +910,8 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(10,5))\n",
-    "df.groupby(:DateHour"
+    "df.groupby(\"DateHour\")[[\"Sessions\",\"Users\"]].sum().plot(ax=plt.gca())\n",
+    "plt.s"
    ]
   }
  ],
