Name given to x-axis

--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -922,6 +922,7 @@
    "source": [
     "plt.figure(figsize=(10,5))\n",
     "df.groupby(\"DateHour\")[[\"Sessions\",\"Users\"]].sum().plot(ax=plt.gca())\n",
+    "plt.title(\"Sessions and user over time\")\n",
     "plt.show()"
    ]
   },
