--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -942,7 +942,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(8,5))"
+    "plt.figure(figsize=(8,5))\n",
+    "sns.barplot(data=df,x=\"channel group\",y=\"Users\",estimator=np.sum,palette=\"viridis\")\n",
+    "plt.title("
    ]
   }
  ],
