Roatation on x-axis

--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -944,7 +944,7 @@
    "source": [
     "plt.figure(figsize=(8,5))\n",
     "sns.barplot(data=df,x=\"channel group\",y=\"Users\",estimator=np.sum,palette=\"viridis\")\n",
-    "plt.title("
+    "plt.title(\"Total Users by Channel\")\n"
    ]
   }
  ],
