Title given to 3rd Table

--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -972,13 +972,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0160203b-7897-4201-beb6-d01bb8e35ef3",
+   "metadata": {},
+   "source": [
+    "Average engagement time by channel"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a58ea440-ed74-466d-a2f2-abe8021aef1b",
+   "id": "b9dde94d-2f31-4282-b306-b132e2c0a8dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Average engage"
+    "plt.figure(figsize=(8,5))\n",
+    "sns.barplot(data=df, x=\"channel group\", y=\"Avg Engagement Time\",estimator=np.mean,palette=\"magma\")"
    ]
   }
  ],
