Title added to 4th table

--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -1022,6 +1022,18 @@
    "source": [
     "Engagement Rate Distribution by channel"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc23c0bb-b560-411e-8300-354f0e432b42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8,5))\n",
+    "snsboxplot(data=df x=\"channel group\" , y=\"Engagement Rate\" , palette=\"coolwarm\")\n",
+    "plt.title(\"Engagement Rate Distribution by channel\")"
+   ]
   }
  ],
  "metadata": {
