Rotation of text along x-axis

--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -1032,7 +1032,8 @@
    "source": [
     "plt.figure(figsize=(8,5))\n",
     "snsboxplot(data=df x=\"channel group\" , y=\"Engagement Rate\" , palette=\"coolwarm\")\n",
-    "plt.title(\"Engagement Rate Distribution by channel\")"
+    "plt.title(\"Engagement Rate Distribution by channel\")\n",
+    "plt."
    ]
   }
  ],
