Grouping to solve 5th Que

--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -1058,6 +1058,24 @@
     "plt.xticks(rotation=45)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2701b957-71cf-47e2-bbee-e7ae0a47bdee",
+   "metadata": {},
+   "source": [
+    "Engaged vs Non-engaged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51136197-b111-44bd-8e30-f805026824c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session_df=df.groupby(\"channel group\""
+   ]
   }
  ],
  "metadata": {
