Operation to calculate non-engaged sessions

--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -1074,7 +1074,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "session_df=df.groupby(\"channel group\""
+    "session_df=df.groupby(\"channel group\")[[\"Sessions\",\"Engaged Session\"]].sum().reset_index()\n",
+    "session_df[\"Non"
    ]
   }
  ],
